syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.mail";
option java_outer_classname = "MailProto";
option objc_class_prefix = "MAIL";

package mail;

service Mail {

  rpc GetMail (MailRequest) returns (MailReply) {}
  
}

message MailRequest {
  string user = 1;
}

message MailReply {
	repeated Email item = 1;
}

message Email {
  string from = 1;
  string subject = 2;
  string date = 3;
  string content = 4;
}
